--- a/Joushinomimi/View/NewsTableViewCell.xib
+++ b/Joushinomimi/View/NewsTableViewCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="445" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="Joushinomimi" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="396" height="445"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="735" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="Joushinomimi" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="396" height="735"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="396" height="445"/>
+                <rect key="frame" x="0.0" y="0.0" width="396" height="735"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Pp-eU-n3G">
@@ -23,13 +23,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mgi-8a-uVa">
-                        <rect key="frame" x="40" y="102.5" width="316" height="147"/>
+                        <rect key="frame" x="40" y="95.5" width="316" height="316"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="mgi-8a-uVa" secondAttribute="height" multiplier="275:128" id="3sk-Xf-s30"/>
+                            <constraint firstAttribute="width" secondItem="mgi-8a-uVa" secondAttribute="height" multiplier="1:1" id="3sk-Xf-s30"/>
                         </constraints>
                     </imageView>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="EDH-Ni-zdD">
-                        <rect key="frame" x="40" y="254.5" width="316" height="147"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="EDH-Ni-zdD">
+                        <rect key="frame" x="40" y="416.5" width="316" height="147"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="EDH-Ni-zdD" secondAttribute="height" multiplier="275:128" id="0WQ-Ed-vnF"/>
@@ -45,9 +45,12 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxh-eU-pRu">
-                        <rect key="frame" x="30" y="59" width="66.5" height="33.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxh-eU-pRu">
+                        <rect key="frame" x="30" y="59" width="326" height="26.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="326" id="X2b-Qi-DJX"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -77,7 +80,7 @@
                 <outlet property="titleLabel" destination="qxh-eU-pRu" id="HL1-F0-GIZ"/>
                 <outlet property="urlToImageView" destination="mgi-8a-uVa" id="kX2-BB-awG"/>
             </connections>
-            <point key="canvasLocation" x="115.94202898550725" y="127.56696428571428"/>
+            <point key="canvasLocation" x="115.94202898550725" y="224.66517857142856"/>
         </tableViewCell>
     </objects>
 </document>
