settingViewControllerに画面をタップしたらキーボードが閉じる機能を実装

--- a/Joushinomimi/Model/Base.lproj/Main.storyboard
+++ b/Joushinomimi/Model/Base.lproj/Main.storyboard
@@ -422,7 +422,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G25-Jv-iCH">
-                                <rect key="frame" x="-93" y="646" width="600" height="80"/>
+                                <rect key="frame" x="57" y="646" width="300" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="LQo-In-wvi"/>
                                 </constraints>
@@ -432,7 +432,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3F-JS-t73">
-                                <rect key="frame" x="-93" y="736" width="600" height="80"/>
+                                <rect key="frame" x="57" y="696" width="300" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="aSO-FE-en6"/>
                                 </constraints>
@@ -449,7 +449,7 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="イラスト３" translatesAutoresizingMaskIntoConstraints="NO" id="8SZ-Fl-50z">
-                                <rect key="frame" x="20" y="98" width="374" height="128"/>
+                                <rect key="frame" x="20" y="98" width="374" height="128.00000000000023"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8SZ-Fl-50z" secondAttribute="height" multiplier="187:64" id="Wzg-1c-FMN"/>
                                 </constraints>
